...
    return await showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text("Discard Changes?"),
        actions: [
          TextButton(
            child: const Text("Cancel"),
            onPressed: () => Navigator.of(context).pop(false),
          ),
          TextButton(
            child: const Text("Discard"),
            onPressed: () => Navigator.of(context).pop(true),
          ),
...

    String path = _pathController.text.trim();
    String name = _nameController.text.trim();
    String prompt = _promptController.text.trim();

    if (path.isEmpty || name.isEmpty || prompt.isEmpty) {
      _showToast("All fields must be filled.");
      return;
    }

    if (!RegExp(r"^[a-zA-Z0-9_-]+$").hasMatch(path)) {
      _showToast("Path may only contain special characters '-', and '_'.");
      return;
...
  @override
  Widget build(BuildContext context) {
    return WillPopScope(
      onWillPop: _isEdited ? _confirmDiscardingChanges : null,
      child: Scaffold(
        appBar: AppBar(
          title: const Text("Edit Deeplink"),
        ),
        body: SingleChildScrollView(
          child: Padding(
            padding: const EdgeInsets.all(20.0),
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: <Widget>[
                TextField(
                  controller: _nameController,
                  decoration: InputDecoration(
                    labelText: "Name",
                    labelStyle:
                        TextStyle(color: Theme.of(context).primaryColor),
                    counterText: "",
                  ),
                  textCapitalization: TextCapitalization.words,
                  maxLength: 200,
...
                  keyboardType: TextInputType.text,
                ),
                const SizedBox(height: 10.0),
                TextField(
                  controller: _pathController,
                  decoration: InputDecoration(
                    labelText: "Deeplink URL",
                    labelStyle:
                        TextStyle(color: Theme.of(context).primaryColor),
                    prefixText: "aiyu://",
                  ),
                  onTap: () {
                    if (_pathController.text.isEmpty &&
...
                const SizedBox(height: 10.0),
                TextField(
                  controller: _promptController,
                  maxLines: 5,
                  textCapitalization: TextCapitalization.sentences,
                  decoration: InputDecoration(
                    labelText: "GPT Prompt",
                    labelStyle:
                        TextStyle(color: Theme.of(context).primaryColor),
                    hintText:
                        "Example: What are some Chinese words that are commonly confused with \$Q.",
                  ),
                ),
...
                  style: Theme.of(context).textTheme.bodySmall,
                ),
                const SizedBox(height: 40.0),
                SizedBox(
                  width: double.infinity,
                  child: FilledButton(
                    child: const Text("Save"),
                    onPressed: () => _saveAndExit(),
                  ),
                ),
                SizedBox(
                  width: double.infinity,
                  child: TextButton(
...
