...
  }

  void deleteDeeplink(int index, DeeplinksModel deeplinks) async {
    bool? delete = await showDialog(
      context: context,
      builder: (context) => AlertDialog(
        title: const Text("Delete Deeplink?"),
        content:
            const Text("Are you sure you want to delete this deeplink action?"),
        actions: [
          TextButton(
            child: const Text("Cancel"),
            onPressed: () => Navigator.of(context).pop(false),
          ),
          TextButton(
            child: const Text("Delete"),
            onPressed: () => Navigator.of(context).pop(true),
          ),
        ],
      ),
    );

...
  @override
  Widget build(BuildContext context) {
    ThemeData theme = Theme.of(context);

    return Scaffold(
      appBar: AppBar(
        title: Text('Configure Deeplinks',
            style: TextStyle(color: theme.primaryColor)),
        centerTitle: true,
      ),
      body: SafeArea(
        child: Column(
          children: <Widget>[
...
                      // end of the list (without it having to be beyond the
                      // Expanded element).
                      if (index == deeplinks.get.length) {
                        return Center(
                          child: TextButton(
                            onPressed: () => addDeeplink(),
                            child: const Text("+ Add New Deeplink"),
                          ),
                        );
                      } else {
                        return Card(
                          margin: const EdgeInsets.symmetric(
                              horizontal: 20, vertical: 10),
...
